--- a/app_nginx.conf
+++ b/app_nginx.conf
@@ -4,11 +4,11 @@ server {
   charset utf-8;
 
   location / {
-    root sed_will_automatically_fill_this_for_you;
+    root sed_magic_1;
   }
 
   location /api {
     include uwsgi_params;
-    uwsgi_pass unix:/var/www/app/app_uwsgi.sock;
+    uwsgi_pass unix:sed_magic_2/sock/app_uwsgi.sock;
   }
 }
