--- a/app_uwsgi.ini
+++ b/app_uwsgi.ini
@@ -1,6 +1,6 @@
 [uwsgi]
 #App's base folder (sed will autofill this for you -- DO NOT TOUCH)
-base = sed_will_automatically_fill_this_for_you
+base = sed_magic_1
 
 #python module to be imported
 app = pokedex
