--- a/app_nginx.conf
+++ b/app_nginx.conf
@@ -9,6 +9,6 @@ server {
 
   location /api {
     include uwsgi_params;
-    uwsgi_pass unix:sed_magic_2/sock/app_uwsgi.sock;
+    uwsgi_pass 127.0.0.1:31337;
   }
 }
