Added error log to nginx configuration

--- a/app_nginx.conf
+++ b/app_nginx.conf
@@ -2,9 +2,10 @@ server {
   listen 8080;
   server_name localhost;
   charset utf-8;
+  error_log sed_magic_1;
 
   location / {
-    root sed_magic_1;
+    root sed_magic_2;
   }
 
   location /api {
